--- a/render.yaml
+++ b/render.yaml
@@ -2,13 +2,17 @@ services:
   - type: web
     name: optiroute
     env: node
-    buildCommand: npm install --legacy-peer-deps
-    startCommand: npm run start:prod
+    buildCommand: npm install --legacy-peer-deps && npm run build:all
+    startCommand: node server.js
     envVars:
       - key: NODE_VERSION
         value: 18.x
       - key: NPM_CONFIG_LEGACY_PEER_DEPS
         value: "true"
+      - key: PORT
+        value: "10000"
+      - key: NODE_ENV
+        value: "production"
     plan: free
     domains:
       - optiroute.onrender.com
