--- a/angular.json
+++ b/angular.json
@@ -199,7 +199,8 @@
                   "maximumError": "10kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "serviceWorker": "projects/client/ngsw-config.json"
             },
             "development": {
               "optimization": false,
