--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@angular/service-worker": "^19.2.0",
     "@supabase/supabase-js": "^2.49.4",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
