--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.0",
+    "@angular/google-maps": "^19.2.14",
     "@angular/material": "^19.2.0",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
@@ -28,6 +29,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.9",
     "express": "^4.18.2",
     "path": "^0.12.7",
     "rxjs": "~7.8.0",
@@ -39,6 +41,8 @@
     "@angular/cli": "^19.2.10",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
+    "dotenv": "^16.5.0",
+    "dotenv-webpack": "^8.1.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
