--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.9",
+    "date-fns": "^4.1.0",
     "express": "^4.18.2",
     "path": "^0.12.7",
     "pg": "^8.11.3",
