--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@angular-devkit/build-angular": "^19.2.10",
     "@angular/cli": "^19.2.10",
     "@angular/compiler-cli": "^19.2.0",
+    "@types/google.maps": "^3.58.1",
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "19.3.0",
     "dotenv": "^16.5.0",
