--- a/angular.json
+++ b/angular.json
@@ -199,8 +199,7 @@
                   "maximumError": "60kB"
                 }
               ],
-              "outputHashing": "all",
-              "serviceWorker": "projects/client/ngsw-config.json"
+              "outputHashing": "all"
             },
             "development": {
               "optimization": false,
