--- a/package.json
+++ b/package.json
@@ -21,12 +21,10 @@
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.0",
-    "@angular/google-maps": "^19.2.14",
     "@angular/material": "^19.2.0",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
-    "@angular/service-worker": "^19.2.0",
     "@supabase/supabase-js": "^2.49.4",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
@@ -34,6 +32,8 @@
     "date-fns": "^4.1.0",
     "express": "^4.18.2",
     "path": "^0.12.7",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^5.2.133",
     "pg": "^8.11.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -44,7 +44,6 @@
     "@angular-devkit/build-angular": "^19.2.10",
     "@angular/cli": "^19.2.10",
     "@angular/compiler-cli": "^19.2.0",
-    "@types/google.maps": "^3.58.1",
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "19.3.0",
     "dotenv": "^16.5.0",
