--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "express": "^4.18.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "path": "^0.12.7",
     "pg": "^8.11.3",
     "rxjs": "~7.8.0",
@@ -46,6 +48,7 @@
     "@angular/compiler-cli": "^19.2.0",
     "@types/google.maps": "^3.58.1",
     "@types/jasmine": "~5.1.0",
+    "@types/jspdf": "^2.0.0",
     "angular-eslint": "19.3.0",
     "dotenv": "^16.5.0",
     "dotenv-webpack": "^8.1.0",
