--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "path": "^0.12.7",
