--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "node server.js",
     "start:prod": "npm run build:all && node server.js",
     "build": "ng build",
-    "build:all": "ng build admin --configuration production && ng build client --configuration production",
+    "build:all": "echo 'Build started at:' && date && ng build admin --configuration production && ng build client --configuration production && echo 'Build completed at:' && date",
     "build:client": "ng build client --configuration production",
     "build:admin": "ng build admin --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "clear-cache": "echo 'To clear browser cache: 1. Open DevTools (F12) 2. Right-click refresh button 3. Select \"Hard Reload\" or press Ctrl+Shift+R'"
   },
   "private": true,
   "dependencies": {
