--- a/projects/client/ngsw-config.json
+++ b/projects/client/ngsw-config.json
@@ -5,7 +5,6 @@
     {
       "name": "app",
       "installMode": "prefetch",
-      "updateMode": "prefetch",
       "resources": {
         "files": [
           "/favicon.ico",
@@ -36,9 +35,9 @@
       ],
       "cacheConfig": {
         "strategy": "freshness",
-        "maxSize": 50,
-        "maxAge": "5m",
-        "timeout": "3s"
+        "maxSize": 100,
+        "maxAge": "1h",
+        "timeout": "5s"
       }
     },
     {
@@ -49,8 +48,8 @@
       ],
       "cacheConfig": {
         "strategy": "performance",
-        "maxSize": 50,
-        "maxAge": "30m"
+        "maxSize": 100,
+        "maxAge": "1d"
       }
     }
   ],
