--- a/angular.json
+++ b/angular.json
@@ -214,6 +214,8 @@
           },
           "configurations": {
             "production": {
+              "serviceWorker": true,
+              "ngswConfigPath": "projects/client/ngsw-config.json",
               "budgets": [
                 {
                   "type": "initial",
