--- a/.browserslistrc
+++ b/.browserslistrc
@@ -9,5 +9,7 @@ last 1 Chrome version
 last 1 Firefox version
 last 2 Edge major versions
 last 2 Safari major versions
-last 2 iOS major versions
-Firefox ESR 
+Safari >= 12
+ios_saf >= 12
+Firefox ESR
+not dead 
