--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.9",
+    "core-js": "^3.37.1",
     "date-fns": "^4.1.0",
     "express": "^4.18.2",
     "html2canvas": "^1.4.1",
