--- a/projects/client/ngsw-config.json
+++ b/projects/client/ngsw-config.json
@@ -9,6 +9,9 @@
       "resources": {
         "files": [
           "/favicon.ico",
+          "/favicon-16x16.png",
+          "/favicon-32x32.png",
+          "/browserconfig.xml",
           "/index.csr.html",
           "/index.html",
           "/manifest.webmanifest",
@@ -23,6 +26,7 @@
       "updateMode": "prefetch",
       "resources": {
         "files": [
+          "/icons/*.png",
           "/**/*.(svg|cur|jpg|jpeg|png|apng|webp|avif|gif|otf|ttf|woff|woff2)"
         ]
       }
